fix: Add pydantic-settings dependency to requirements.txt
- Added pydantic-settings==2.7.0 which is required by backend/core/config.py
- This dependency was missing from the original requirements.txt
- Required for Settings class to properly inherit from BaseSettings

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,6 +22,10 @@ uvicorn[standard]==0.30.6
 # Pydantic for request/response model validation and settings management
 pydantic==2.10.4
 
+# Pydantic settings extension for environment variable configuration
+# Required by backend/core/config.py for BaseSettings class
+pydantic-settings==2.7.0
+
 # HTTP Client
 # -----------
 # Async HTTP client for external API calls and health checks
